--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<script src="game.js"></script>
+<script src="game-min.js"></script>
 <style>
     canvas{
         padding-left: auto;
