removed console.log s

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <script src="game-min.js"></script>
 <style>
+    body{
+        text-align: center;
+    }
     canvas{
-        padding-left: auto;
-        padding-right: auto;
         font-family: "Courier New", Courier, monospace;
         font-size: 42px;
     }
